--- a/src/app/modules/sourcing/estate-details/estate-details.component.scss
+++ b/src/app/modules/sourcing/estate-details/estate-details.component.scss
@@ -13,13 +13,3 @@
         z-index: 9;
     }
 }
-
-.source-knowmore {
-    @media (max-width: 767px) {
-        a {
-            width: 48%;
-            text-align: center;
-            margin: 0;
-        }
-    }
-}
